--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
 		  <artifactId>commons-exec</artifactId>
 		  <version>1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0</version>
+		</dependency>
 	</dependencies>
 </project>
